--- a/index.html
+++ b/index.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Primary Meta Tags -->
+<title>Anony | Send anonymous messages with your friends !</title>
+<meta name="title" content="Anony | Send anonymous messages with your friends !" />
+<meta name="description" content="Anony is a platform that helps you send and receive anonymous messages with your friends. It's a creative way to learn what your friends think and discover the untold truth." />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://anony-awpm.onrender.com/" />
+<meta property="og:title" content="Anony | Send anonymous messages with your friends !" />
+<meta property="og:description" content="Anony is a platform that helps you send and receive anonymous messages with your friends. It's a creative way to learn what your friends think and discover the untold truth." />
+  <meta property="og:image" content="https://anony-awpm.onrender.com/public/anony_banner.jpeg" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://anony-awpm.onrender.com/" />
+<meta property="twitter:title" content="Anony | Send anonymous messages with your friends !" />
+<meta property="twitter:description" content="Anony is a platform that helps you send and receive anonymous messages with your friends. It's a creative way to learn what your friends think and discover the untold truth." />
+<meta property="og:image" content="https://anony-awpm.onrender.com/public/
+anony_banner.jpeg" />
+<!-- Meta Tags Generated with https://metatags.io -->
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anony | Send anonymous with friends</title>
+   
   </head>
   <body>
     <div id="app"></div>
