Google verification metatag

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="7rIb7RxN5494Qw70kCHeKFzcOVsv8fPuTHy3_IZfChA"/>
     <!-- Primary Meta Tags -->
 <title>Anony | Send anonymous messages with your friends !</title>
 <meta name="title" content="Anony | Send anonymous messages with your friends !" />
